Add TikTok download support with proxy configuration
- Add TikTok URL pattern recognition (vm.tiktok.com, vt.tiktok.com, tiktok.com)
- Implement proxy support for TikTok downloads via PROXY_URL env variable
- Add environment variables logging (without exposing sensitive data)
- Rename download_instagram_video to download_video for both platforms
- Update bot commands and help messages to mention TikTok support
- Update README with TikTok usage examples and proxy configuration guide
- Increase rate limit from 4M to 8M for better download performance

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 # Telegram Bot Configuration
 TELEGRAM_BOT_TOKEN=your_bot_token_here
+
+# Proxy Configuration (optional, required for TikTok downloads)
+# Format: http://username:password@host:port or socks5://username:password@host:port
+PROXY_URL=
