Добавить документацию по настройке Google Sheets
Добавлено:
- Подробное руководство по настройке Google Cloud и Service Account
- Инструкции по созданию и структуре таблицы Google Sheets
- Примеры формул для автоматического подсчета статистики (исправлены для русской локали)
- Обновлен .env.example с новыми переменными окружения для статистики

Формулы используют точку с запятой в качестве разделителя и русские имена функций.

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,14 @@ TELEGRAM_BOT_TOKEN=your_bot_token_here
 # Proxy Configuration (optional, required for TikTok downloads)
 # Format: http://username:password@host:port or socks5://username:password@host:port
 PROXY_URL=
+
+# Admin Configuration
+# Telegram user ID of the bot administrator (can view statistics)
+ADMIN_USER_ID=123456789
+
+# Google Sheets Statistics (optional)
+# Service account credentials JSON as a single line string
+# Example: {"type":"service_account","project_id":"your-project","private_key":"...","client_email":"..."}
+GOOGLE_CREDENTIALS_JSON=
+# Google Sheets spreadsheet ID (from the URL between /d/ and /edit)
+GOOGLE_SHEETS_SPREADSHEET_ID=
