Использовать Base64 кодирование для Google Sheets credentials
Изменена переменная окружения GOOGLE_CREDENTIALS_JSON на
GOOGLE_CREDENTIALS_JSON_BASE64 для решения проблемы с экранированием
специальных символов при передаче JSON через Docker и CI/CD системы.

Изменения:
- stats.py: добавлена декодировка credentials из Base64
- .env.example: обновлены комментарии с инструкциями по кодированию
- README.md: добавлена документация по настройке Google Sheets с примерами
  кодирования для локальной разработки и CI/CD

--- a/.env.example
+++ b/.env.example
@@ -10,8 +10,9 @@ PROXY_URL=
 ADMIN_USER_ID=123456789
 
 # Google Sheets Statistics (optional)
-# Service account credentials JSON as a single line string
-# Example: {"type":"service_account","project_id":"your-project","private_key":"...","client_email":"..."}
-GOOGLE_CREDENTIALS_JSON=
+# Service account credentials JSON encoded in Base64
+# To encode: cat credentials.json | base64 -w 0 (Linux) or base64 -i credentials.json (macOS)
+# For CI/CD: echo -n '{"type":"service_account",...}' | base64 -w 0
+GOOGLE_CREDENTIALS_JSON_BASE64=
 # Google Sheets spreadsheet ID (from the URL between /d/ and /edit)
 GOOGLE_SHEETS_SPREADSHEET_ID=
